--- a/browser.css
+++ b/browser.css
@@ -4,3 +4,6 @@ i { font-style: italic; }
 b { font-weight: bold; }
 small { font-size: 90%; }
 big { font-size: 110%; }
+sup {font-size: 50%;}
+abbr {font-size: 70%; font-weight: bold;}
+pre {font-family: "IBM Plex Mono";}
