--- a/browser.css
+++ b/browser.css
@@ -8,3 +8,38 @@ sup {font-size: 50%;}
 abbr {font-size: 70%; font-weight: bold;}
 pre {font-family: "IBM Plex Mono";}
 code {font-family: Courier}
+
+body {
+    margin: 0;
+    padding: 0;
+    gap: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f4f4f4;
+    flex-direction: column; 
+    height: 100vh; 
+}
+
+.block-1 {
+    width: 150px;
+    height: 150px;
+    background-color: #4CAF50;
+}
+
+.block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border: 2px solid #333;
+    font-size: 18px;
+}
+
+.block-2 {
+    width: 300px;
+    height: 100px;
+    background-color: #2196F3;
+}
+
+div {background-color: black}
